syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "message_supplier.proto";

service Admin {
  rpc GetSupplierList (SupplierListReq) returns (SupplierListResp) {
    option (google.api.http) = {
      get: "/v1/admin/suppliers"
    };
  }
}

message SupplierListReq {}

message SupplierListResp {
  int32 code = 1;
  string message = 2;
  repeated Supplier data = 3;
}